GameController updated and TUI updated with documentation